--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,3 +11,11 @@ domain: mydomain
 domain_suffix: local
 slapd_path: /etc/openldap/slapd.d
 
+openldap_client_pckgs:
+  - openldap
+  - openldap-clients
+  - nss-pam-ldapd
+
+ldap_server: 10.114.0.2
+
+
