--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,6 +10,8 @@ olc_rootDN: ldapadm
 domain: mydomain
 domain_suffix: local
 slapd_path: /etc/openldap/slapd.d
+ldap_log_path: /var/log/slapd
+ldap_log_file: slapd.log
 
 openldap_client_pckgs:
   - openldap
@@ -17,5 +19,3 @@ openldap_client_pckgs:
   - nss-pam-ldapd
 
 ldap_server: 10.114.0.2
-
-
